changed nav bar font size

--- a/public/style.css
+++ b/public/style.css
@@ -17,12 +17,12 @@ body {
 }
 
 nav {
-  background-color: #5793fd;
+  background-color: #4d6faa;
   color: #ffffff;
   height: 80px;
   padding: 10px;
   line-height: 3;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
 }
 
 
