--- a/public/style.css
+++ b/public/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 nav {
-  background-color: #4d6faa;
+  background-color: #3d6fc4;
   color: #ffffff;
   height: 80px;
   padding: 10px;
@@ -38,7 +38,7 @@ header {
   height: 150px;
   padding-top: 80px;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
 }
 
 header h1 {
@@ -369,9 +369,6 @@ form > button {
   margin-bottom: 5px;
 }
 
-/* .workout .card {
-  width: 350px;
-} */
 
 .prev-workout button {
   margin: 10px;
